<resources>
    <string name="app_name">InTime</string>
    <string name="title_activity_maps">Map</string>
    <string name="User_portrait">user_portrait</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Pretend there is control bar.</string>
    <string name="title_activity_red_tag_info">+ REQUEST</string>
    <string name="title_activity_blue_tag_info">+ PROMPT</string>
    <string name="title_activity_green_tag_info">+ OFFER</string>
    <string name="query_placeholder">Pretend that you can search..</string>
    <string name="Search_result_title">Search Result For:</string>
    <string name="Nav_item_notifications">Notifications</string>
    <string name="Nav_item_friends">Friends</string>
    <string name="Nav_item_templates">Templates</string>
    <string name="Nav_item_wallet">Wallet</string>
    <string name="Nav_item_history">History</string>
    <string name="Nav_item_promotion">Promotion</string>
    <string name="Nav_item_help">Help</string>
    <string name="Nav_item_setting">Setting</string>
    <string name="Nav_item_orders">Orders</string>
    <string name="Mask_actionbar_title">Hold to Drag the Marker.</string>
    <string name="startup_reg_cancel_btn">Cancel</string>
    <string name="startup_reg_confirm_btn">Submit</string>
    <string name="startup_app_title">InTime</string>
    <string name="subtitle">—— Design for a substantial life.</string>
    <string name="Nav_item_logout">Logout</string>
    <string name="Nav_header_user_detail">User Detail</string>
    <string name="Nav_header_order_detail">Order Detail</string>
    <string name="Nav_header_template_detail">Template Detail</string>
    <string name="Nav_header_template_edit">Edit</string>
    <string name="user_detail_hint"><font size="12">Required when changing password</font></string>
    <string name="reg_box_email_optional"><font size="15">Optional</font></string>
    <string name="user_detail_email_hint_optional"><font size="13">Optional</font></string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>


    <!-- Pull to Refresh -->
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="not_updated_yet">Not updated yet</string>
    <string name="updated_at">Last updated at %1$s</string>
    <string name="updated_just_now">Just updated</string>
    <string name="time_error">Time Error!</string>


</resources>
