<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userinfo.WalletActivity"
    android:background="#f8f8f8">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_actionbar_height"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:background="@drawable/bg_querybar">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_actionbar_icon_margin"
            android:padding="@dimen/custom_actionbar_icon_padding"
            android:src="@drawable/ic_actionbar_back"
            android:background="@drawable/bg_backbutton" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nav_header_user_detail"
            android:gravity="center_vertical"
            android:textSize="@dimen/custom_actionbar_title_textsize"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/linearLayout3"
        android:background="#f8f8f8"
        android:scrollIndicators="right">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:src="@drawable/user_portrait"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/User_portrait"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_userportriat_border"
            android:padding="3dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:id="@+id/user_detail_username_label"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/user_detail_username"
            android:layout_alignBottom="@+id/user_detail_username"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_username"
            android:layout_alignParentTop="false"
            android:layout_toEndOf="@+id/user_detail_username_label"
            android:layout_alignLeft="@+id/user_detail_repassword"
            android:textCursorDrawable="@null"
            android:theme="@style/MyAppThemeGray"
            android:layout_below="@+id/imageView"
            android:singleLine="true"
            android:fontFamily="san-serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:id="@+id/user_detail_password_label"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/user_detail_password"
            android:layout_alignBottom="@+id/user_detail_password"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_password"
            android:inputType="textPassword"
            android:layout_toEndOf="@+id/user_detail_password_label"
            android:layout_below="@+id/user_detail_username"
            android:layout_alignLeft="@+id/user_detail_repassword"
            android:textCursorDrawable="@null"
            android:theme="@style/MyAppThemeGray"
            android:hint="@string/user_detail_hint"
            android:textColorHint="@color/customcolorHint"
            android:singleLine="true"
            android:fontFamily="san-serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Re-Password: "
            android:id="@+id/user_detail_repassword_label"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/user_detail_repassword"
            android:layout_alignBottom="@+id/user_detail_repassword"
            android:gravity="fill_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_repassword"
            android:inputType="textPassword"
            android:layout_toEndOf="@+id/user_detail_repassword_label"
            android:layout_below="@+id/user_detail_password"
            android:textCursorDrawable="@null"
            android:hint="@string/user_detail_hint"
            android:textColorHint="@color/customcolorHint"
            android:theme="@style/MyAppThemeGray"
            android:singleLine="true"
            android:fontFamily="san-serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone: "
            android:id="@+id/user_detail_phone_label"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/user_detail_phone"
            android:layout_alignBottom="@+id/user_detail_phone"
            android:gravity="center_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_phone"
            android:inputType="phone"
            android:layout_toEndOf="@+id/user_detail_phone_label"
            android:layout_below="@+id/user_detail_email"
            android:layout_alignLeft="@+id/user_detail_repassword"
            android:textCursorDrawable="@null"
            android:theme="@style/MyAppThemeGray"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email: "
            android:id="@+id/user_detail_email_label"
            android:layout_alignParentStart="true"
            android:gravity="fill_vertical"
            android:layout_alignTop="@+id/user_detail_email"
            android:layout_alignBottom="@+id/user_detail_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_detail_email"
            android:inputType="textEmailAddress"
            android:layout_toEndOf="@+id/user_detail_email_label"
            android:layout_below="@+id/user_detail_repassword"
            android:layout_alignLeft="@+id/user_detail_repassword"
            android:textCursorDrawable="@null"
            android:theme="@style/MyAppThemeGray"
            android:hint="@string/user_detail_email_hint_optional"
            android:textColorHint="@color/customcolorHint"
            android:singleLine="true"
            android:fontFamily="san-serif" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modify"
            android:id="@+id/user_detail_modify_btn"
            android:layout_below="@+id/user_detail_phone"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp" />
    </RelativeLayout>
    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:visibility="invisible"
        android:id="@+id/user_detail_loading"
        android:indeterminateTint="@color/customcolorGray"
        android:indeterminateTintMode="src_atop" />

</RelativeLayout>
